2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* md5.h: New file from glibc 2.7.
	* md5.c: Likewise.
	* Makefile.am (common_sources): Add md5.h and md5.c.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* _exit.c (_exit) [RM_INTERN]: Don't l4_yield.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* s_printf.c (io_buffer_flush) [! RM_INTERN]: New function.
	(io_buffer_append) [! RM_INTERN]: Likewise.
	(s_puts)[! RM_INTERN]: Use them.
	(s_vprintf) [! RM_INTERN]: Likewise.
	(s_putchar)[! RM_INTERN]: Use rm_write.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* assert.h (build_assert): Define.
	
	(assertx): Call _exit on failure.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* s-printf.h (s_printf): Use gcc's format attribute.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): [! NDEBUG]: Only free folios
	address space after we are really done using it.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* errno.h (_ERRNO_H) [! _ENABLE_TESTS && ! RM_INTERN]: Undef.
	[! _ENABLE_TESTS && ! RM_INTERN]: Include next <errno.h>.

2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* strings.h: New file, from today's glibc CVS HEAD.

2008-06-11  Neal H. Walfield  <neal@gnu.org>

	* s-printf.h: New file.
	* Makefile.am (common_sources): Add s-printf.h.
	* s_printf.c: Include "s-printf.h".

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): When allocating a folio, only
	update the shadow capability's type after the folio has actually
	been allocated.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (as_insert_custom): Replace use of as_insert
	with as_insert_full.
	(allocate_object): Change return type to struct
	as_allocate_pt_ret.  Replace use of as_slot_ensure with
	as_ensure_use.
	(allocate_page_table): New function.
	(process_spawn): Update use of as_insert_custom to be consistent
	with new API, in particular, pass allocate_page_table instead of